# Algorithme-et-Prog-en-C

./: .gitignore  CMakeLists.txt
Controle/: exercice1.c  exercice2.c  exercice3.c
Structure/: Exercice1.c  Exercice2.c  Exercice3.c  Exercice4.c  exercice1.txt  exercice2.txt
TP/: TP1.c  TP2.c  TP3.c  TP4.c  TP5.c  TP_Bonus.c
